// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload should't render since files are empty 1`] = `
<div
  class="example-drag"
  files=""
>
  <div
    class="upload"
  >
    <ul>
      <td
        colspan="7"
      >
        <div
          class="text-center p-5"
        >
          <h4>
            Drop files anywhere to upload
            <br />
            or
          </h4>
           
          <label
            class="btn btn-lg btn-primary"
            for="file"
          >
            Select Files
          </label>
        </div>
      </td>
    </ul>
     
    <div
      class="drop-active"
      style="display: none;"
    >
      <h3>
        Drop files to upload
      </h3>
    </div>
     
    <div
      class="example-btn"
    >
      <file-upload-stub
        accept="image/*, application/pdf"
        chunk="[object Object]"
        class="btn btn-primary"
        data="[object Object]"
        drop="true"
        dropdirectory="true"
        extensions=""
        headers="[object Object]"
        maximum="2"
        multiple="true"
        name="file"
        postaction="https://en91d9jkz3gou.x.pipedream.net"
        size="10485760"
        thread="1"
        timeout="0"
        value=""
      >
        <i
          class="fa fa-plus"
        />
        
          Select files
        
      </file-upload-stub>
       
      <button
        class="btn btn-success"
        type="button"
      >
        <i
          aria-hidden="true"
          class="fa fa-arrow-up"
          id="startUpload"
        />
        
          Start Upload
        
      </button>
    </div>
  </div>
</div>
`;

exports[`FileUpload shouldn't render files since bad file 1`] = `
<div
  class="example-drag"
  files="[object Object]"
>
  <div
    class="upload"
  >
    <ul>
      <td
        colspan="7"
      >
        <div
          class="text-center p-5"
        >
          <h4>
            Drop files anywhere to upload
            <br />
            or
          </h4>
           
          <label
            class="btn btn-lg btn-primary"
            for="file"
          >
            Select Files
          </label>
        </div>
      </td>
    </ul>
     
    <div
      class="drop-active"
      style="display: none;"
    >
      <h3>
        Drop files to upload
      </h3>
    </div>
     
    <div
      class="example-btn"
    >
      <file-upload-stub
        accept="image/*, application/pdf"
        chunk="[object Object]"
        class="btn btn-primary"
        data="[object Object]"
        drop="true"
        dropdirectory="true"
        extensions=""
        headers="[object Object]"
        maximum="2"
        multiple="true"
        name="file"
        postaction="https://en91d9jkz3gou.x.pipedream.net"
        size="10485760"
        thread="1"
        timeout="0"
        value=""
      >
        <i
          class="fa fa-plus"
        />
        
          Select files
        
      </file-upload-stub>
       
      <button
        class="btn btn-success"
        type="button"
      >
        <i
          aria-hidden="true"
          class="fa fa-arrow-up"
          id="startUpload"
        />
        
          Start Upload
        
      </button>
    </div>
  </div>
</div>
`;
